--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
