--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@langchain/core": "^0.2.9",
+    "@langchain/openai": "^0.2.0",
+    "@lemonsqueezy/lemonsqueezy.js": "^1.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.2",
