--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "jspdf": "^2.5.1",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
