--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/payment/starter-plan/route.js", "app/api/payment/pro-plan/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/payment/starter-plan/route.js", "app/api/payment/pro-plan/route.js", "components/landing_page/HeroSection.jsx"],
   "exclude": ["node_modules"]
 }
