--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "jspdf": "^2.5.1",
+    "mixpanel-browser": "^2.53.0",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
